--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,5 @@ whitenoise>=6.6,<7.0
 
 # Gunicorn WSGI 서버 (Production)
 gunicorn>=21.0,<22.0
+# 에디터 (Summernote)
+django-summernote>=0.8.20,<0.9.0
